# allelegator

./: .gitignore  README.md  pyproject.toml
allelgator/: align.py  analyze.py  cli.py  detect.py  loaders.py  render.py
allelgator/data/: apoe_alleles.fasta
examples/: ecoli_evgs.fasta  ecoli_gad.fasta
man/: allelegator.1  gator.1
tests/: test_align.py  test_analyze.py  test_cli.py  test_detect.py  test_loaders.py  test_render.py
